--- a/anuncios.html
+++ b/anuncios.html
@@ -44,7 +44,7 @@
             <div class="right">
                 <div class="registro">
                     <ul class="esconder">
-                        <li><a href="#registro">Login</a></li>
+                        <li><a href="log_in.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                             <div class="container-mail">
                             </div>
                         </div>
-                        <a class="button-mail mail-alumnos no-display" href="#contactar">
+                        <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                             <span><strong>Enséñale</strong></span>
 
                         </a>
@@ -260,7 +260,7 @@
                                 <h3 class="destacado type-color-3">¿Quieres que alguien te enseñe?</h3>
                             </div>
                             <div class="mas-info-destacado">
-                                <a class="button-2 full-button type-color-3 publicar-duda" href="#">publica tus dudas</a>
+                                <a class="button-2 full-button type-color-3 publicar-duda" href="publicar_duda.html">publica tus dudas</a>
                             </div>
                 </article>
             </li>
@@ -292,7 +292,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(5)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail mail-alumnos no-display" href="#contactar">
+                            <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                             <span><strong>Enséñale</strong></span>
 
                         </a>
@@ -329,7 +329,7 @@
                                 </div>
                             </div></a>
                              <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -366,7 +366,7 @@
                                 </div>
                             </div></a>
                             <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -403,7 +403,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -440,7 +440,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                               <a class="button-mail mail-alumnos no-display" href="#contactar">
+                               <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -477,7 +477,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -514,7 +514,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -551,7 +551,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -588,7 +588,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -625,7 +625,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                               <a class="button-mail mail-alumnos no-display" href="#contactar">
+                               <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -662,7 +662,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                             <a class="button-mail mail-alumnos no-display" href="#contactar">
+                             <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -699,7 +699,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -736,7 +736,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -774,7 +774,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -811,7 +811,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -848,7 +848,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -885,7 +885,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -922,7 +922,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -959,7 +959,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -996,7 +996,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1033,7 +1033,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1070,7 +1070,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1107,7 +1107,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1144,7 +1144,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1181,7 +1181,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1218,7 +1218,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1255,7 +1255,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                  <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                  <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
@@ -1292,7 +1292,7 @@
                                 </div>
                             </div></a>
                            <div class="container-mail">
-                                 <a class="button-mail mail-alumnos no-display" href="#contactar">
+                                 <a class="button-mail mail-alumnos no-display" href="contactar_curso.html">
                                 <span><strong>Enséñale</strong></span>
                                 </a>
                             </div>
