--- a/anunciosprofes.html
+++ b/anunciosprofes.html
@@ -8,7 +8,6 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/buscador.js"></script>
     <script src="js/filtros-responsive.js"></script>
-    <script src="js/links-popups.js"></script>
     <script src="js/ordenar.js"></script>
     <script src="js/filtros.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
@@ -16,7 +15,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinysort/2.2.2/tinysort.min.js"></script>
-    <script>
+     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -45,8 +44,7 @@
             <div class="right">
                 <div class="registro">
                     <ul class="esconder">
-                        <li><a href="#registro">Login</a></li>
-                    </ul>
+                        <li><a href="log_in.html">Login</a></li>
                 </div>
             </div>
         </nav>
@@ -61,7 +59,7 @@
         </div>
     </div>
     <div class="container-button-title">
-    <a class="button-2 margin-top type-color-3 publicar-curso" href="publicar_curso.html"><span>Publica tu curso</span></a>
+    <a class="button-2 margin-top type-color-3 publicar-curso boton-raro" href="publicar_curso.html">Publica tu curso</a>
 </div>
 </div>
 <!--filtros y ordenar de tablet y mobil-->
@@ -230,7 +228,7 @@
                                 </div>
                             </div></a>
                         </div>
-                           <a class="button-mail no-display" href="#contactar">
+                           <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                         </div>
@@ -271,7 +269,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(8)</span>
                                 </div>
                             </div></a>
-                          <a class="button-mail no-display" href="#contactar">
+                          <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -314,7 +312,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(9)</span>
                                 </div>
                             </div></a>
-                        <a class="button-mail no-display" href="#contactar">
+                        <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -356,7 +354,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(10)</span>
                                 </div>
                             </div></a>
-                          <a class="button-mail no-display" href="#contactar">
+                          <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -369,7 +367,7 @@
                                 <h3 class="destacado type-color-3">¿No encuentras el curso que quieres?</h3>
                             </div>
                             <div class="mas-info-destacado">
-                                <a class="general-button button-2 full-button type-color-3" href="#">publica tus dudas</a>
+                                <a class="general-button button-2 full-button type-color-3" href="publicar_duda.html">publica tus dudas</a>
                             </div>
                 </article>
             </li>
@@ -408,7 +406,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(5)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -450,7 +448,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(7)</span>
                                 </div>
                             </div></a>
-                          <a class="button-mail no-display" href="#contactar">
+                          <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -492,7 +490,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(16)</span>
                                 </div>
                             </div></a>
-                             <a class="button-mail no-display" href="#contactar">
+                             <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -534,7 +532,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(11)</span>
                                 </div>
                             </div></a>
-                          <a class="button-mail no-display" href="#contactar">
+                          <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -576,7 +574,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(3)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -618,7 +616,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(9)</span>
                                 </div>
                             </div></a>
-                           <a class="button-mail no-display" href="#contactar">
+                           <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -660,7 +658,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(11)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -702,7 +700,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(20)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -715,7 +713,7 @@
                                 <h3 class="destacado type-color-3">¿No encuentras el curso que quieres?</h3>
                             </div>
                             <div class="mas-info-destacado">
-                                <a class="general-button button-2 full-button type-color-3" href="#">publica tus dudas</a>
+                                <a class="general-button button-2 full-button type-color-3" href="publicar_duda.html">publica tus dudas</a>
                             </div>
                 </article>
                 </li>
@@ -754,7 +752,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(9)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -796,7 +794,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(20)</span>
                                 </div>
                             </div></a>
-                           <a class="button-mail no-display" href="#contactar">
+                           <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -838,7 +836,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(2)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -880,7 +878,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(25)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -922,7 +920,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(8)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -964,7 +962,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(21)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
@@ -1006,7 +1004,7 @@
                                     <span class="modificar type-color-2 opacity-hover">(5)</span>
                                 </div>
                             </div></a>
-                            <a class="button-mail no-display" href="#contactar">
+                            <a class="button-mail no-display" href="contactar_curso.html">
                                 <span></span>
                             </a>
                             </div>
