--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="right">
                 <div class="registro">
                     <ul class="esconder">
-                        <li><a href="#registro">Login</a></li>
+                        <li><a href="log_in.html">Login</a></li>
                     </ul>
                 </div>
             </div>
