--- a/contactar_curso.html
+++ b/contactar_curso.html
@@ -55,11 +55,11 @@
         <div class="titulo-encabezado titulo-publicar cf">
             <div class="contenido-titulo cf">
                 <h1 class="title type-color-1 title-margin margin-clase-grande">Uops! </h1>
-                <h1 class="title type-color-1 title-margin margin-clase"> Envíanos un correo </br>para publicar el curso
+                <h1 class="title type-color-1 title-margin margin-clase-2"> No es posible contactar </br>directamente con otro creativo
                 </h1>
             </div>
-            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible publicar un curso desde la web.
-            Te pedimos que si estás interesado en ayudar a otro creativo y que mejore sus conocimientos,  escríbenos a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b>
+            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible contactar con otro creativo desde nuestra web.
+            Si estás interesado en realizar un curso, envíanos un correo a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b> y indícanos qué curso desearías cursar.
             </p>
         </div>
         </p>
