--- a/log_in.html
+++ b/log_in.html
@@ -55,14 +55,13 @@
         <div class="titulo-encabezado titulo-publicar cf">
             <div class="contenido-titulo cf">
                 <h1 class="title type-color-1 title-margin margin-clase-grande">Uops! </h1>
-                <h1 class="title type-color-1 title-margin margin-clase"> Envíanos un correo </br>para publicar el curso
+                <h1 class="title type-color-1 title-margin margin-clase"> Aún no es posible registrarse </br>en nuestra comunidad
                 </h1>
             </div>
-            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible publicar un curso desde la web.
-            Te pedimos que si estás interesado en ayudar a otro creativo y que mejore sus conocimientos,  escríbenos a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b>
+            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible registrarse directamente.
+            Te pedimos que si estás interesado en formar parte de puntoyseguido y empezar a intercambiar conocimientos con otros creativos escríbenos a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b> y nos pondremos en contacto contigo para buscarte las clases que necesitas para aprender
             </p>
         </div>
-        </p>
     </div>
 
     <footer>
