--- a/publicar_duda.html
+++ b/publicar_duda.html
@@ -55,11 +55,12 @@
         <div class="titulo-encabezado titulo-publicar cf">
             <div class="contenido-titulo cf">
                 <h1 class="title type-color-1 title-margin margin-clase-grande">Uops! </h1>
-                <h1 class="title type-color-1 title-margin margin-clase"> Envíanos un correo </br>para publicar el curso
+                <h1 class="title type-color-1 title-margin margin-clase"> Envíanos un correo </br>para publicar tu duda
                 </h1>
             </div>
-            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible publicar un curso desde la web.
-            Te pedimos que si estás interesado en ayudar a otro creativo y que mejore sus conocimientos,  escríbenos a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b>
+            <p class="p-con-margen">Lo sentimos, actualmente esta web está en fase de beta y no es posible publicar la duda que te gustaría que te resolvieran.</p>
+            <p class="p-con-margen">
+            Te pedimos que nos envies un correo a <b><a class="link-error" href="mailto:holapuntoyseguido@gmail.com">holapuntoyseguido@gmail.com </a></b> y nos indiques qué te gustaría aprender y nos encargaremos de buscarte un profesor y ponerte en contacto en el menor tiempo posible.
             </p>
         </div>
         </p>
