--- a/como_funciona.html
+++ b/como_funciona.html
@@ -33,17 +33,47 @@
                 <ul class="esconder">
                     <li class="tamano_fijo"><a href="anunciosprofes.html" class="uppercase">Encuentra tu curso</a></li>
                     <li class="tamano_fijo"><a href="anuncios.html" class="uppercase">Busca tu alumno</a></li>
-                    <li class="tamano_fijo"><a href="como_funciona.html" class="uppercase">¿Cómo funciona?</a></li>
+                    <li class="tamano_fijo"><a href="funciona.html" class="uppercase">¿Cómo funciona?</a></li>
                 </ul>
             </div>
             <div class="right">
                 <div class="registro">
                     <ul class="esconder">
-                        <li><a href="log_in.html">Login</a></li>
+                        <li><a href="#login">
+                                <span class="icono-rectangular-grande header-mensajeria" alt="Menu-navegador-desplegable"></span>
+                            </a>
+                        </li>
+                        <li><a href="#registro">Mi perfil</a></li>
                     </ul>
+                </div>
+                <div class="lupa-buscador">
+                    <div class="dropdown__wrap">
+                        <a href="#">
+                            <span class="imagen-desplegable icono-rectangular-grande menu-desplegable" alt="Menu-navegador-desplegable"></span>
+                        </a>
+                        <ul class="dropdown">
+                            <li class="alineacion_vertical">
+                                <a href="anunciosprofes.html">Encuentra tu curso</a>
+                            </li>
+                            <li class="alineacion_vertical">
+                                <a href="anuncios.html">Busca tu alumno</a>
+                            </li>
+                            <li class="alineacion_vertical">
+                                <a href="como_funciona.html">¿Cómo funciona?</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
+        <div class="buscador-desplegado cf">
+            <input type="text" id="input-buscador" placeholder="Busca tu curso o a un creativo" style="background: white" name="buscador">
+            <div class="buscador-container-derecha cf">
+                <div class="container-button-buscador left">
+                    <a class="button-2 full-button-header type-color-3" href="#">Buscar</a>
+                </div>
+            </div>
+        </div>
     </header>
 	<div class="cabecera-alumnos cf">
 <div class="titulo-encabezado cf">
