--- a/anuncios.html
+++ b/anuncios.html
@@ -38,17 +38,13 @@
                 <ul class="esconder">
                     <li class="tamano_fijo"><a href="anunciosprofes.html" class="uppercase">Encuentra tu curso</a></li>
                     <li class="tamano_fijo"><a href="anuncios.html" class="uppercase">Busca tu alumno</a></li>
-                    <li class="tamano_fijo"><a href="funciona.html" class="uppercase">¿Cómo funciona?</a></li>
+                    <li class="tamano_fijo"><a href="como_funciona.html" class="uppercase">¿Cómo funciona?</a></li>
                 </ul>
             </div>
             <div class="right">
                 <div class="registro">
                     <ul class="esconder">
-                        <li><a href="#login">
-                                <span class="icono-rectangular-grande header-mensajeria" alt="Menu-navegador-desplegable"></span>
-                            </a>
-                        </li>
-                        <li><a href="#registro">Mi perfil</a></li>
+                        <li><a href="log_in.html">Registro</a></li>
                     </ul>
                 </div>
                 <div class="lupa-buscador">
@@ -80,7 +76,6 @@
             </div>
         </div>
     </header>
-
 <div class="cabecera-alumnos cf">
 <div class="titulo-encabezado cf">
       <div class="muneco-busqueda left"></div>
