--- a/anunciosprofes.html
+++ b/anunciosprofes.html
@@ -218,7 +218,7 @@
                 <ul class="row anuncios">
                 <li data-reciente="1" data-popularidad="5" data-puntuacion="1" class="large-4 medium-6 small-12 columns audiovisual">
                     <article class="anuncio">
-                        <a class="type-color-5" href="anuncioampliado.html">
+                        <a class="type-color-5">
                             <div class="image-container cf">
                                 <img class="img-curso" src="imagenes/anuncio-12.jpg" alt="Imagen chroma de un perro">
                             </div>
@@ -305,7 +305,7 @@
 
                 <li data-reciente="4" data-popularidad="9" data-puntuacion="2" class="large-4 medium-6 small-12 columns audiovisual">
                     <article class="anuncio">
-                        <a class="type-color-5" href="anuncioampliado.html"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-3.jpg" alt="Imagen lightpainting">
                         </div>
                            <div class="hover-container">
@@ -347,7 +347,7 @@
                 </li>
                 <li data-reciente="5" data-popularidad="10" data-puntuacion="4" class="large-4 medium-6 small-12 columns animacion">
                     <article class="anuncio">
-                        <a class="type-color-5" href="anuncioampliado.html"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-21.jpg" alt="Imagen muestra de formatos imagen">
                         </div>
                             <div class="hover-container">
@@ -399,7 +399,7 @@
             </li>
             <li data-reciente="6" data-popularidad="5" data-puntuacion="2" class="large-4 medium-6 small-12 columns animacion">
                     <article class="anuncio height-cursos">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-5.jpg" alt="Imagen modelar coche 3D">
                         </div>
                             <div class="hover-container">
@@ -441,7 +441,7 @@
                 </li>
                 <li data-reciente="7" data-popularidad="7" data-puntuacion="1" class="large-4 medium-6 small-12 columns arquitectura">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-14.jpg" alt="Imagen programa Autocad">
                         </div>
                             <div class="hover-container">
@@ -483,7 +483,7 @@
                 </li>
                 <li data-reciente="8" data-popularidad="16" data-puntuacion="3" class="large-4 medium-6 small-12 columns arquitectura">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-7.jpg" alt="Imagen modelar parque infantil">
                         </div>
                             <div class="hover-container">
@@ -525,7 +525,7 @@
                 </li>
                 <li data-reciente="9" data-popularidad="11" data-puntuacion="5" class="large-4 medium-6 small-12 columns industrial">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-27.jpg" alt="Imagen diseño de interiores">
                         </div>
                            <div class="hover-container">
@@ -567,7 +567,7 @@
                 </li>
                 <li data-reciente="10" data-popularidad="3" data-puntuacion="2" class="large-4 medium-6 small-12 columns industrial">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-17.jpg" alt="Personaje hecho en impresora 3D">
                         </div>
                            <div class="hover-container">
@@ -609,7 +609,7 @@
                 </li>
                 <li data-reciente="11" data-popularidad="9" data-puntuacion="3" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-13.jpg" alt="Imagen maquetar cartel">
                         </div>
                             <div class="hover-container">
@@ -651,7 +651,7 @@
                 </li>
                 <li data-reciente="12" data-popularidad="11" data-puntuacion="4" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-23.jpg" alt="Imagen de formatos de imagen">
                         </div>
                             <div class="hover-container">
@@ -693,7 +693,7 @@
                 </li>
                 <li data-reciente="13" data-popularidad="20" data-puntuacion="1" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-22.jpg" alt="Ilustración formatos imágenes">
                         </div>
                             <div class="hover-container">
@@ -745,7 +745,7 @@
                 </li>
                  <li data-reciente="15" data-popularidad="9" data-puntuacion="1" class="large-4 medium-6 small-12 columns programacion">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-15.jpg" alt="Imagen de MYSQL">
                         </div>
                             <div class="hover-container">
@@ -787,7 +787,7 @@
                 </li>
                 <li data-reciente="16" data-popularidad="20" data-puntuacion="4" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-6.jpg" alt="Imagen maquetación revista">
                         </div>
                           <div class="hover-container">
@@ -829,7 +829,7 @@
                 </li>
                 <li data-reciente="17" data-popularidad="2" data-puntuacion="2" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-11.jpg" alt="Imagen de una tipo en retícula">
                         </div>
                             <div class="hover-container">
@@ -871,7 +871,7 @@
                 </li>
                 <li data-reciente="23" data-popularidad="25" data-puntuacion="3" class="large-4 medium-6 small-12 columns grafico">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-10.jpg" alt="Imagen de dispositivos web">
                         </div>
                             <div class="hover-container">
@@ -913,7 +913,7 @@
                 </li>
                 <li data-reciente="24" data-popularidad="8" data-puntuacion="3" class="large-4 medium-6 small-12 columns fotografia">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-20.jpg" alt="Fotografia del movimiento">
                         </div>
                            <div class="hover-container">
@@ -955,7 +955,7 @@
                 </li>
                 <li data-reciente="25" data-popularidad="21" data-puntuacion="2" class="large-4 medium-6 small-12 columns web">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-26.jpg" alt="Imagen programar formulario">
                         </div>
                            <div class="hover-container">
@@ -997,7 +997,7 @@
                 </li>
                 <li data-reciente="26" data-popularidad="5" data-puntuacion="3" class="large-4 medium-6 small-12 columns moda">
                     <article class="anuncio">
-                        <a class="type-color-5" href="#"><div class="image-container cf">
+                        <a class="type-color-5"><div class="image-container cf">
                             <img class="img-curso" src="imagenes/anuncio-25.jpg" alt="Imagen muestra de tejidos">
                         </div>
                             <div class="hover-container">
